main.tf
# The following configuration uses a provider which provisions [fake] resources
# to a fictitious cloud vendor called "Fake Web Services". Configuration for
# the fakewebservices provider can be found in provider.tf.
#
# After running the setup script (./scripts/setup.sh), feel free to change these
# resources and 'terraform apply' as much as you'd like! These resources are
# purely for demonstration and created in Terraform Cloud, scoped to your TFC
# user account.
#
# To review the provider and documentation for the available resources and
# schemas, see: https://registry.terraform.io/providers/hashicorp/fakewebservices
#
# If you're looking for the configuration for the remote backend, you can find that
# in backend.tf.

resource "aws_security_group" "allow_api_access" {
  name        = "allow_api_access"
  description = "Allow api inbound traffic"
  vpc_id      = "vpc-0226b985b3ac80314"

  ingress {
    from_port   = 80
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "allow_ssh" {
  name        = "allow_ssh"
  description = "Allow ssh inbound traffic"
  vpc_id      = "vpc-0226b985b3ac80314"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "backend" {
  ami           = "ami-0bd6906508e74f692"
  instance_type = "t2.micro"
  count         = 1

  tags = {
    Name = "backend"
  }

  key_name        = "dody mbp 16"
  security_groups = ["${aws_security_group.allow_ssh.name}", "${aws_security_group.allow_api_access.name}"]
}
